@@ -11,9 +11,10 @@ import com.ark.center.iam.infra.permission.assembler.PermissionAssembler;
 import com.ark.center.iam.infra.permission.gateway.db.PermissionMapper;
 import com.ark.center.iam.infra.permission.gateway.db.PermissionRoleRel;
 import com.ark.center.iam.infra.permission.gateway.db.PermissionRoleRelMapper;
+import com.ark.component.ddd.domain.AggregateRoot;
 import com.ark.component.orm.mybatis.base.BaseEntity;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
-import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -25,18 +26,19 @@ import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
-public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permission> implements PermissionGateway {
+public class PermissionGatewayImpl implements PermissionGateway {
 
     private final PermissionRoleRelMapper permissionRoleRelMapper;
-
     private final PermissionAssembler permissionAssembler;
+    private final PermissionMapper permissionMapper;
 
     @Override
     public List<Permission> selectByType(PermissionType permissionType) {
-        return lambdaQuery()
-                .eq(Permission::getType, permissionType.getName())
-                .eq(Permission::getStatus, PermissionStatusEnums.ENABLED.getValue())
-                .list();
+        return permissionMapper.selectList(
+                        new LambdaQueryWrapper<>(Permission.class)
+                                .eq(Permission::getType, permissionType.getName())
+                                .eq(Permission::getStatus, PermissionStatusEnums.ENABLED.getValue())
+                );
     }
 
     @Override
@@ -44,12 +46,12 @@ public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permiss
         if (CollectionUtil.isEmpty(roleIds)) {
             return Collections.emptyList();
         }
-        return baseMapper.selectByRoleIdsAndType(roleIds, permissionType.getName());
+        return permissionMapper.selectByRoleIdsAndType(roleIds, permissionType.getName());
     }
 
     @Override
     public void insert(Permission permission) {
-        save(permission);
+        permissionMapper.insert(permission);
     }
 
     @Override
@@ -65,7 +67,7 @@ public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permiss
         List<PermissionRoleRel> permissionRoleRelList = permissionRoleRelMapper
                 .selectByRoleIdAndType(applicationId, roleId, permissionType.getName());
         if (CollectionUtils.isNotEmpty(permissionRoleRelList)) {
-            List<Long> ids = permissionRoleRelList.stream().map(BaseEntity::getId).sorted().toList();
+            List<Long> ids = permissionRoleRelList.stream().map(AggregateRoot::getId).sorted().toList();
             permissionRoleRelMapper.deleteBatchIds(ids);
         }
     }
@@ -93,7 +95,7 @@ public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permiss
 
     @Override
     public List<PermissionDTO> selectRolePermissions(Long applicationId, Long roleId, String permissionType) {
-        List<Permission> permissions = this.baseMapper.selectByRoleIdAndType(applicationId, roleId, permissionType);
+        List<Permission> permissions = this.permissionMapper.selectByRoleIdAndType(applicationId, roleId, permissionType);
         return permissions.stream().map(permissionAssembler::toPermissionDTO).collect(Collectors.toList());
     }
 
@@ -104,7 +106,7 @@ public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permiss
         permission.setResourceId(resourceId);
         permission.setStatus(PermissionStatusEnums.ENABLED.getValue());
         permission.setCode(generatePermissionCode(permissionType.getTag(), resourceId));
-        save(permission);
+        permissionMapper.insert(permission);
     }
 
     /**
@@ -117,25 +119,28 @@ public class PermissionGatewayImpl extends ServiceImpl<PermissionMapper, Permiss
 
     @Override
     public void deleteByResourceIds(List<Long> resourceIds) {
-        lambdaUpdate()
-                .in(Permission::getResourceId, resourceIds)
-                .remove();
+        permissionMapper.delete(
+                new LambdaUpdateWrapper<>(Permission.class)
+                        .in(Permission::getResourceId, resourceIds)
+        );
     }
 
     @Override
     public List<ApiPermissionVO> selectApiPermissionsByRoleIds(List<Long> roleIds) {
-        return baseMapper.selectApiPermissionsByRoleIds(roleIds);
+        return permissionMapper.selectApiPermissionsByRoleIds(roleIds);
     }
 
     @Override
     public List<Long> selectResourceIdsByIds(List<Long> permissionIds) {
-        return lambdaQuery()
-                .select(Permission::getResourceId)
-                .in(BaseEntity::getId, permissionIds)
-                .eq(Permission::getIsDeleted, 0)
-                .list().stream()
+        return permissionMapper.selectList(
+                        new LambdaQueryWrapper<>(Permission.class)
+                                .select(Permission::getResourceId)
+                                .in(AggregateRoot::getId, permissionIds)
+                                .eq(Permission::getIsDeleted, 0)
+                )
+                .stream()
                 .map(Permission::getResourceId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
